--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,3 +17,6 @@ spring.h2.console.enabled=false
 
 # JWT ? (?? ???, ??? .env ????? ?? ??)
 jwt.secret=your-very-secret-key-should-be-long-enough
+
+springdoc.api-docs.path=/v3/api-docs
+springdoc.swagger-ui.path=/swagger-ui.html
