Nginx 리디렉션 설정 및 spring 리디렉션 설정 끄기

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 # ?????? ?? ??
 spring.application.name=Scheduly
 server.port=8080
+server.forward-headers-strategy=native
+server.ssl.enabled=false
 
 # H2 ?????? ??
 spring.datasource.url=jdbc:h2:mem:testdb
