--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,3 @@
-# ?????? ?? ??
 spring.application.name=Scheduly
 server.port=8080
 server.forward-headers-strategy=native
@@ -10,14 +9,25 @@ spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
-# JPA ??
-spring.jpa.hibernate.ddl-auto=update
+# ??: ?????? ?? ? Entity ???? ???? DB ???? ???? ??/??
+# create: ?? ?? ???? ???? ?? ?? (?? ?? ??)
+# update: ??? ??? ??
+# validate: Entity? ???? ????? ??? ?
+# none: ???? ?? ??
+spring.jpa.hibernate.ddl-auto=create
+
+# ???? SQL ??? ??? ???? ??
 spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
 
-# H2 Console ???? (?? ? ??? ??)
-spring.h2.console.enabled=false
+# H2 Console ???
+spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
-# JWT ? (?? ???, ??? .env ????? ?? ??)
+# JPA ? Hibernate ??
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# JWT Spring Security ??
 jwt.secret=your-very-secret-key-should-be-long-enough
 
 springdoc.api-docs.path=/v3/api-docs
