--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,28 +4,42 @@ server.forward-headers-strategy=native
 server.ssl.enabled=false
 
 # H2 ?????? ??
-spring.datasource.url=jdbc:h2:mem:scheduly_db;MODE=MySQL
-spring.datasource.driver-class-name=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+#spring.datasource.url=jdbc:h2:mem:scheduly_db;MODE=MySQL
+#spring.datasource.driver-class-name=org.h2.Driver
+#spring.datasource.username=sa
+#spring.datasource.password=
+
+# H2 Console ???
+#spring.h2.console.enabled=true
+#spring.h2.console.path=/h2-console
+
+# JPA ? Hibernate ??
+#spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# MySQL ?????? ?? ??
+spring.datasource.url=jdbc:mysql://54.180.159.200:3306/scheduly_db?useSSL=false&serverTimezone=Asia/Seoul&characterEncoding=UTF-8
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+spring.datasource.username=root
+spring.datasource.password=${DB_PASSWORD}
+
+# JPA ? Hibernate ??
+spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 
 # ??: ?????? ?? ? Entity ???? ???? DB ???? ???? ??/??
 # create: ?? ?? ???? ???? ?? ?? (?? ?? ??)
 # update: ??? ??? ??
 # validate: Entity? ???? ????? ??? ?
 # none: ???? ?? ??
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
+
+# application.properties? ??
+logging.level.org.hibernate.SQL=debug
 
 # ???? SQL ??? ??? ???? ??
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
-# H2 Console ???
-spring.h2.console.enabled=true
-spring.h2.console.path=/h2-console
 
-# JPA ? Hibernate ??
-spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
 # JWT Spring Security ??
 jwt.secret=your-very-secret-key-should-be-long-enough
