--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -31,7 +31,7 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
 # update: ??? ??? ??
 # validate: Entity? ???? ????? ??? ?
 # none: ???? ?? ??
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=create
 
 # application.properties? ??
 logging.level.org.hibernate.SQL=debug
