--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,14 +24,14 @@ spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 
 # JPA ? Hibernate ??
-spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 
 # ??: ?????? ?? ? Entity ???? ???? DB ???? ???? ??/??
 # create: ?? ?? ???? ???? ?? ?? (?? ?? ??)
 # update: ??? ??? ??
 # validate: Entity? ???? ????? ??? ?
 # none: ???? ?? ??
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 
 # application.properties? ??
 logging.level.org.hibernate.SQL=debug
