--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -24,7 +24,8 @@ spring.datasource.username=root
 spring.datasource.password=${DB_PASSWORD}
 
 # JPA ? Hibernate ??
-spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.properties.hibernate.temp.use_jdbc_metadata_defaults=false
 
 # ??: ?????? ?? ? Entity ???? ???? DB ???? ???? ??/??
 # create: ?? ?? ???? ???? ?? ?? (?? ?? ??)
