--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -21,7 +21,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/scheduly_db?useSSL=false&serve
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.username=root
-spring.datasource.password=${DB_PASSWORD}
+spring.datasource.password=Cesco!2025
 
 # JPA ? Hibernate ??
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
